--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "//Test and build a vending machine app",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
